# MNIST

./: DS102_KANUPSIM_MNIST.ipynb  DS102_KUNOPSIM_MNIST.ipynb  README.md  draw.py  index.py  model.pth  nn.py  pyproject.toml  requirements.txt  test.txt
