[project]
name = "MNIST"
version = "2025.0.1"
requires-python = ">=3.12"
dependencies = [
  "jupyter",
  "matplotlib",
  "pandas",
  "torch",
  "torchvision",
  "ruff"
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[project.optional-dependencies]
streamlit = [
  "streamlit"
]