[project]
name = "MNIST"
version = "2025.0.1"
requires-python = ">=3.12"
dependencies = [
  "jupyter",
  "matplotlib",
  "pandas",
  "torch",
  "torchvision",
  "ruff",
  "streamlit",
  "pyxel",
  "streamlit-drawable-canvas>=0.9.3",
  "pillow>=11.1.0",
  "torchshow>=0.5.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
